<resources>
    <string name="app_name">Expense Control</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="analyse_expenses">Analyse Expenses</string>
    <string name="set_budget">Set Budget</string>
    <string name="list_expenses">List Expenses</string>
    <string name="add_expense">Add Expense</string>
    <string name="home">Home</string>
</resources>
