<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/add_expense"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/add_expense" />
        <item
            android:id="@+id/list_expense"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/list_expenses" />
        <item
            android:id="@+id/set_budget"
            android:icon="@drawable/ic_border_color_black_24dp"
            android:title="@string/set_budget" />
        <item
            android:id="@+id/analyse_expenses"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/analyse_expenses" />
    </group>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/setting"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />

        </menu>
    </item>

</menu>
